--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-my-lint",
+  "name": "eslint-plugin-rxjs-subscribe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
